--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
   <div class="trust-bar">
     <div class="trust-item">
       <i class="fas fa-award"></i>
-      <h3>15+</h3>
+      <h3>40+</h3>
       <p>Anos de Experiência</p>
     </div>
     <div class="trust-item">
@@ -796,7 +796,7 @@
           <i class="fas fa-cogs"></i>
         </div>
         <h3>Manutenção Corretiva</h3>
-        <p>Reparos especializados em motor, câmbio, suspensão e sistema elétrico com peças originais e garantia de qualidade.</p>
+        <p>Reparos especializados em motor, câmbio e suspensão, com peças originais e garantia de qualidade.</p>
       </div>
       <div class="service-card">
         <div class="service-icon">
@@ -810,7 +810,7 @@
           <i class="fas fa-wind"></i>
         </div>
         <h3>Ar Condicionado</h3>
-        <p>Manutenção, recarga e conserto de sistema de climatização para seu conforto em todas as estações do ano.</p>
+        <p>Manutenção para seu conforto em todas as estações do ano.</p>
       </div>
       <div class="service-card">
         <div class="service-icon">
@@ -823,8 +823,8 @@
         <div class="service-icon">
           <i class="fas fa-battery-full"></i>
         </div>
-        <h3>Sistema Elétrico</h3>
-        <p>Diagnóstico e reparo de problemas elétricos, bateria, alternador e sistema de injeção eletrônica.</p>
+        <h3>Bateria</h3>
+        <p>Troca e teste de baterias para evitar falhas inesperadas. Trabalhamos com marcas confiáveis e garantia para sua tranquilidade.</p>
       </div>
     </div>
   </section>
@@ -895,8 +895,8 @@
 
   <section class="gallery-section">
     <div class="section-title">
-      <h2>Nossos Trabalhos</h2>
-      <p>Confira alguns dos serviços realizados em nossa oficina</p>
+      <h2>Conheça Nosso Espaço</h2>
+      <p>Anos de experiência em um ambiente preparado para atender você</p>
       <div class="line"></div>
     </div>
     <div class="carousel-container">
@@ -945,8 +945,7 @@
       <div class="line"></div>
     </div>
     <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.0!2d-38.4!3d-12.1!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTLCsDA2JzAwLjAiUyAzOMKwMjQnMDAuMCJX!5e0!3m2!1spt-BR!2sbr!4v1234567890" allowfullscreen="" loading="lazy"></iframe>
-    </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d243.79471889262217!2d-38.4182947!3d-12.1316078!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716bd563c659961%3A0x3ee7dc1cb07e9d21!2sJorginho%20Car!5e0!3m2!1spt-BR!2sbr!4v1759167689913!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    </div>
   </section>
 
   <footer>
