--- a/index.html
+++ b/index.html
@@ -4,706 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/src/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+  <script src="animar.js"></script>
   <title>Oficina Jorginho Car | Mecânica Especializada em Alagoinhas</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
 
-    :root {
-      --primary: #007bff;
-      --primary-dark: #0056b3;
-      --secondary: #00aaff;
-      --dark: #111;
-      --darker: #000;
-      --light-gray: #f5f5f5;
-      --white: #fff;
-      --text-dark: #222;
-      --text-light: #666;
-    }
-
-    body {
-      background: var(--light-gray);
-      color: var(--text-dark);
-      line-height: 1.6;
-      overflow-x: hidden;
-    }
-
-    /* Header Profissional */
-    header {
-      background: var(--white);
-      padding: 20px 8%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 15px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
-    }
-
-    header.scrolled {
-      padding: 12px 8%;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
-    }
-
-    .logo-container {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .logo-container img {
-      height: 55px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-
-    .logo-text {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .logo-text h2 {
-      font-size: 1.4rem;
-      color: var(--dark);
-      font-weight: 700;
-    }
-
-    .logo-text span {
-      font-size: 0.75rem;
-      color: var(--text-light);
-      letter-spacing: 1px;
-    }
-
-    nav ul {
-      display: flex;
-      gap: 35px;
-      list-style: none;
-    }
-
-    nav a {
-      color: var(--text-dark);
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 0.95rem;
-      transition: color 0.3s;
-      position: relative;
-    }
-
-    nav a::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: var(--primary);
-      transition: width 0.3s;
-    }
-
-    nav a:hover {
-      color: var(--primary);
-    }
-
-    nav a:hover::after {
-      width: 100%;
-    }
-
-    .header-right {
-      display: flex;
-      align-items: center;
-      gap: 25px;
-    }
-
-    .contact-btn {
-      padding: 10px 25px;
-      background: var(--primary);
-      color: var(--white);
-      text-decoration: none;
-      border-radius: 25px;
-      font-weight: 600;
-      transition: all 0.3s;
-      font-size: 0.9rem;
-    }
-
-    .contact-btn:hover {
-      background: var(--primary-dark);
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0,123,255,0.3);
-    }
-
-    .social-icons {
-      display: flex;
-      gap: 15px;
-    }
-
-    .social-icons a {
-      color: var(--text-dark);
-      font-size: 1.1rem;
-      transition: all 0.3s;
-      width: 35px;
-      height: 35px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      background: var(--light-gray);
-    }
-
-    .social-icons a:hover {
-      color: var(--white);
-      background: var(--primary);
-      transform: translateY(-3px);
-    }
-
-    /* Hero Section Moderna */
-    .hero {
-      position: relative;
-      background: linear-gradient(135deg, rgba(0,0,0,0.7), rgba(0,123,255,0.5)), url('src/motor2.jpg') center/cover no-repeat;
-      min-height: 90vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 60px 8%;
-    }
-
-    .hero-content {
-      max-width: 800px;
-      color: var(--white);
-      text-align: center;
-      animation: fadeInUp 1s ease;
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .hero h1 {
-      font-size: 3.2rem;
-      font-weight: 700;
-      margin-bottom: 25px;
-      line-height: 1.2;
-    }
-
-    .hero-highlight {
-      color: var(--secondary);
-    }
-
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 35px;
-      line-height: 1.8;
-      opacity: 0.95;
-    }
-
-    .hero-buttons {
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    .btn-primary, .btn-secondary {
-      padding: 15px 35px;
-      text-decoration: none;
-      border-radius: 30px;
-      font-weight: 600;
-      font-size: 1rem;
-      transition: all 0.3s;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .btn-primary {
-      background: var(--primary);
-      color: var(--white);
-    }
-
-    .btn-primary:hover {
-      background: var(--primary-dark);
-      transform: translateY(-3px);
-      box-shadow: 0 8px 20px rgba(0,123,255,0.4);
-    }
-
-    .btn-secondary {
-      background: transparent;
-      color: var(--white);
-      border: 2px solid var(--white);
-    }
-
-    .btn-secondary:hover {
-      background: var(--white);
-      color: var(--primary);
-      transform: translateY(-3px);
-    }
-
-    /* Trust Bar */
-    .trust-bar {
-      background: var(--dark);
-      padding: 40px 8%;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 30px;
-      text-align: center;
-      color: var(--white);
-    }
-
-    .trust-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .trust-item i {
-      font-size: 2.5rem;
-      color: var(--secondary);
-      margin-bottom: 5px;
-    }
-
-    .trust-item h3 {
-      font-size: 2rem;
-      font-weight: 700;
-    }
-
-    .trust-item p {
-      color: #aaa;
-      font-size: 0.95rem;
-    }
-
-    /* Section Title */
-    .section-title {
-      text-align: center;
-      margin-bottom: 60px;
-      animation: fadeIn 1s ease;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    .section-title h2 {
-      font-size: 2.5rem;
-      color: var(--dark);
-      margin-bottom: 15px;
-      font-weight: 700;
-    }
-
-    .section-title p {
-      color: var(--text-light);
-      font-size: 1.1rem;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    .section-title .line {
-      width: 80px;
-      height: 4px;
-      background: var(--primary);
-      margin: 20px auto 0;
-      border-radius: 2px;
-    }
-
-    /* Services Section */
-    .services-section {
-      padding: 100px 8%;
-      background: var(--white);
-    }
-
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 35px;
-    }
-
-    .service-card {
-      background: var(--white);
-      padding: 40px 30px;
-      border-radius: 15px;
-      box-shadow: 0 5px 25px rgba(0,0,0,0.08);
-      transition: all 0.4s ease;
-      border: 2px solid transparent;
-      text-align: center;
-    }
-
-    .service-card:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
-      border-color: var(--primary);
-    }
-
-    .service-icon {
-      width: 80px;
-      height: 80px;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto 25px;
-      font-size: 2.2rem;
-      color: var(--white);
-      transition: all 0.3s;
-    }
-
-    .service-card:hover .service-icon {
-      transform: scale(1.1) rotate(5deg);
-    }
-
-    .service-card h3 {
-      font-size: 1.4rem;
-      margin-bottom: 15px;
-      color: var(--dark);
-    }
-
-    .service-card p {
-      color: var(--text-light);
-      line-height: 1.7;
-    }
-
-    /* Why Choose Us */
-    .why-us {
-      padding: 100px 8%;
-      background: var(--light-gray);
-    }
-
-    .why-us-content {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-      margin-top: 50px;
-    }
-
-    .why-card {
-      background: var(--white);
-      padding: 35px 25px;
-      border-radius: 12px;
-      display: flex;
-      gap: 20px;
-      align-items: flex-start;
-      box-shadow: 0 3px 15px rgba(0,0,0,0.06);
-      transition: all 0.3s;
-    }
-
-    .why-card:hover {
-      transform: translateX(10px);
-      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-    }
-
-    .why-icon {
-      font-size: 2rem;
-      color: var(--primary);
-      min-width: 50px;
-    }
-
-    .why-card h4 {
-      margin-bottom: 10px;
-      font-size: 1.2rem;
-      color: var(--dark);
-    }
-
-    .why-card p {
-      color: var(--text-light);
-      font-size: 0.95rem;
-      line-height: 1.6;
-    }
-
-    /* Gallery Carousel */
-    .gallery-section {
-      padding: 80px 0;
-      background: var(--dark);
-      overflow: hidden;
-    }
-
-    .gallery-section .section-title h2,
-    .gallery-section .section-title p {
-      color: var(--white);
-    }
-
-    .gallery-section .section-title p {
-      color: #aaa;
-    }
-
-    .carousel-container {
-      overflow: hidden;
-      padding: 40px 0;
-      position: relative;
-    }
-
-    .carousel-container::before,
-    .carousel-container::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      width: 150px;
-      height: 100%;
-      z-index: 2;
-      pointer-events: none;
-    }
-
-    .carousel-container::before {
-      left: 0;
-      background: linear-gradient(to right, var(--dark), transparent);
-    }
-
-    .carousel-container::after {
-      right: 0;
-      background: linear-gradient(to left, var(--dark), transparent);
-    }
-
-    .carousel {
-      display: flex;
-      width: max-content;
-      animation: scroll 30s linear infinite;
-      gap: 20px;
-      padding: 0 20px;
-    }
-
-    .carousel:hover {
-      animation-play-state: paused;
-    }
-
-    .carousel img {
-      height: 180px;
-      width: 280px;
-      object-fit: cover;
-      border-radius: 12px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.5);
-      transition: all 0.3s;
-      cursor: pointer;
-    }
-
-    .carousel img:hover {
-      transform: scale(1.08);
-      box-shadow: 0 8px 30px rgba(0,170,255,0.4);
-    }
-
-    @keyframes scroll {
-      from { transform: translateX(0); }
-      to { transform: translateX(-50%); }
-    }
-
-    /* Contact Section */
-    .contact-section {
-      padding: 100px 8%;
-      background: var(--white);
-    }
-
-    .contact-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 40px;
-      margin-top: 50px;
-    }
-
-    .contact-card {
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
-      padding: 40px 30px;
-      border-radius: 15px;
-      text-align: center;
-      color: var(--white);
-      transition: all 0.3s;
-      cursor: pointer;
-    }
-
-    .contact-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 15px 35px rgba(0,123,255,0.3);
-    }
-
-    .contact-card i {
-      font-size: 3rem;
-      margin-bottom: 20px;
-      opacity: 0.9;
-    }
-
-    .contact-card h4 {
-      font-size: 1.3rem;
-      margin-bottom: 15px;
-      font-weight: 600;
-    }
-
-    .contact-card p {
-      line-height: 1.8;
-      opacity: 0.95;
-    }
-
-    .contact-card a {
-      color: var(--white);
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    /* Map Section */
-    .map-section {
-      background: var(--light-gray);
-      padding: 80px 8%;
-      text-align: center;
-    }
-
-    .map-container {
-      margin-top: 40px;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.1);
-      max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .map-container iframe {
-      width: 100%;
-      height: 450px;
-      border: none;
-    }
-
-    /* Footer */
-    footer {
-      background: var(--darker);
-      color: #888;
-      padding: 60px 8% 30px;
-    }
-
-    .footer-content {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 40px;
-      margin-bottom: 40px;
-    }
-
-    .footer-section h3 {
-      color: var(--white);
-      margin-bottom: 20px;
-      font-size: 1.3rem;
-    }
-
-    .footer-section p,
-    .footer-section a {
-      color: #aaa;
-      line-height: 2;
-      text-decoration: none;
-      transition: color 0.3s;
-      display: block;
-    }
-
-    .footer-section a:hover {
-      color: var(--primary);
-    }
-
-    .footer-bottom {
-      border-top: 1px solid #222;
-      padding-top: 30px;
-      text-align: center;
-      color: #666;
-    }
-
-    /* WhatsApp Float Button */
-    .whatsapp-float {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      width: 60px;
-      height: 60px;
-      background: #25D366;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.8rem;
-      color: var(--white);
-      box-shadow: 0 5px 20px rgba(37,211,102,0.5);
-      z-index: 999;
-      transition: all 0.3s;
-      text-decoration: none;
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0%, 100% {
-        transform: scale(1);
-      }
-      50% {
-        transform: scale(1.1);
-      }
-    }
-
-    .whatsapp-float:hover {
-      background: #128C7E;
-      transform: scale(1.15);
-    }
-
-    /* Responsive */
-    @media (max-width: 968px) {
-      header {
-        flex-direction: column;
-        gap: 20px;
-        padding: 20px 5%;
-      }
-
-      nav ul {
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 20px;
-      }
-
-      .header-right {
-        flex-direction: column;
-        gap: 15px;
-      }
-
-      .hero h1 {
-        font-size: 2.2rem;
-      }
-
-      .hero p {
-        font-size: 1rem;
-      }
-
-      .hero-buttons {
-        flex-direction: column;
-      }
-
-      .section-title h2 {
-        font-size: 2rem;
-      }
-
-      .services-section,
-      .why-us,
-      .contact-section,
-      .map-section {
-        padding: 60px 5%;
-      }
-
-      .carousel img {
-        height: 140px;
-        width: 220px;
-      }
-
-      .whatsapp-float {
-        width: 55px;
-        height: 55px;
-        bottom: 20px;
-        right: 20px;
-      }
-    }
-  </style>
 </head>
 <body>
+
+<!-- Criado por Tiagotj7.dev -->
 
   <header id="header">
     <div class="logo-container">
@@ -828,6 +137,8 @@
       </div>
     </div>
   </section>
+
+<!-- Criado por Tiagotj7.dev -->
 
   <section class="why-us" id="diferenciais">
     <div class="section-title">
@@ -994,31 +305,7 @@
     <i class="fab fa-whatsapp"></i>
   </a>
 
-  <script>
-    // Header scroll effect
-    window.addEventListener('scroll', function() {
-      const header = document.getElementById('header');
-      if (window.scrollY > 50) {
-        header.classList.add('scrolled');
-      } else {
-        header.classList.remove('scrolled');
-      }
-    });
-
-    // Smooth scroll for anchor links
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) {
-          target.scrollIntoView({
-            behavior: 'smooth',
-            block: 'start'
-          });
-        }
-      });
-    });
-  </script>
-
 </body>
 </html>
+
+<!-- Criado por Tiagotj7.dev -->
